# lamma_custom_inference_raw_C-_and_cuda

./: .gitignore  CMakeLists.txt  README.md
docs/: EXPLAINER.tex  EXPLAINER.txt  FILE_STRUCTURE_SNAPSHOT.txt  FORWARD_PASS_COMPUTE_GRAPH.tex  FULL_FORWARD_PASS_HANDBOOK.tex  LLAMA7B_CUDA_KERNEL_HANDBOOK.tex  LLAMA7B_CUDA_KERNEL_HANDBOOK.txt
include/: llama_engine.hpp
include/cuda_kernels/: llama_cuda_kernels.cuh
scripts/: download_test_models.sh
src/: engine_forward.cpp  engine_lifecycle.cpp  engine_math_kernels.cpp  engine_sampling.cpp  llama_engine.cpp  main.cpp  tokenizer.cpp
src/cuda_kernels/: attention_scores_kernel.cu  attention_weighted_sum_kernel.cu  matvec_kernel.cu  rmsnorm_kernel.cu  rope_kernel.cu  softmax_kernel.cu  swiglu_kernel.cu
tests/: test_generation.cpp  test_tokenizer.cpp
